# ChangeLog for dev-java/antlr
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/antlr/ChangeLog,v 1.74 2009/04/26 23:54:25 ranger Exp $

  26 Apr 2009; Brent Baude <ranger@gentoo.org> antlr-3.1.3-r1.ebuild:
  Marking antlr-3.1.3-r1 ~ppc for bug 264195

  24 Apr 2009; Brent Baude <ranger@gentoo.org> antlr-3.1.3-r1.ebuild:
  Marking antlr-3.1.3-r1 ~ppc64 for bug 264259

  11 Apr 2009; Alistair Bush <ali_bush@gentoo.org> antlr-3.1.3-r1.ebuild:
  Keyword ~amd64.

*antlr-3.1.3-r1 (10 Apr 2009)

  10 Apr 2009; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  +antlr-3.1.3-r1.ebuild:
  Add support for gunit.

  29 Mar 2009; Serkan Kaba <serkan@gentoo.org> +files/2.7.7-makefixes.patch,
  antlr-2.7.7:
  Fix bug #256880. Thanks to Diego E. Pettenò <flameeyes@gentoo.org> for
  help.

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  +files/2.7.7-gcc-4.4.patch, antlr-2.7.7.ebuild:
  Add patch for gcc 4.4. Fixes bug #262319.

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> antlr-3.1.3.ebuild:
  Require java use flag on antlr:0.

*antlr-3.1.3 (29 Mar 2009)

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> +antlr-3.1.3.ebuild:
  Version bump. Fixes bug #146952. Keywording tracked in bug #264195. Adding
  support for runtimes tracked in bug #264196.

  03 Jan 2009; Raúl Porcel <armin76@gentoo.org> antlr-2.7.7.ebuild:
  Drop ia64 keyword

  26 Jun 2008; Serkan Kaba <serkan@gentoo.org> antlr-2.7.7.ebuild:
  Fix antlr2 website. Thanks calculus <calculuspenguin@yahoo.com> for
  reporting.

  05 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> antlr-2.7.7.ebuild:
  Call base_src_unpack explicitly in src_unpack. Fixes bug #207361.

  04 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  +files/2.7.7-gcc-4.3.patch, antlr-2.7.7.ebuild:
  Add patch for gcc-4.3. Fixes bug #207631. Thanks to impulze@impulze.org for
  the patch.

  08 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> antlr-2.7.7.ebuild: