@@ -6,6 +6,7 @@ DIST antlr-3.1.3-generated.tar.bz2 47167 RMD160 9ea64a67aba65bf27e8abbdfbd1a28a0
 DIST antlr-3.1.3.tar.gz 10743515 RMD160 e772197a8a89783ec7cb3e0005913e0396a0ca4c SHA1 2558d373c1d94d8fdd9d26a5be390316aa6b5350 SHA256 1fca0fc7304140807e64ec263a58d93ef1b380cfb6407084e6909f8220bc1039
 EBUILD antlr-2.7.7.ebuild 2808 RMD160 cec075994a46eadcbd271539b1dcef4d8261f4a7 SHA1 a838dfd77c25d09ead7bdb51bdebcb74344ffc70 SHA256 8bffe59f40e0e31c17dad46fa4526128f397c636496f39752d959e3b02e53c05
 EBUILD antlr-3.1.3-r1.ebuild 3153 RMD160 4764a9934478be9389a524985868741d189d0d40 SHA1 c90b520ab76f23a98d455e897f42cfded78dab6f SHA256 cd1129b2c81977d507bad9cc9ba4a38675a95bcb10676971a44a8ca037f01c40
+EBUILD antlr-3.1.3-r2.ebuild 3439 RMD160 44f99b2648b3841c62892186574a2c982fdc6e75 SHA1 1f76349840b047056376eb29d0eb0fd3f02e93d5 SHA256 c84754e6aa1f3fe653b18c440ed8218258dcb19d0312a866931ad495d8958940
 EBUILD antlr-3.1.3.ebuild 2734 RMD160 47985dd866cbd729ae5e686ee164157b906d1470 SHA1 685b0607546f3e37d008d6803528da21108e8c22 SHA256 3653dc9e3948c45f09a6efca636c526884ca56886b3b926b8a30bac1c3f504d4
-MISC ChangeLog 10315 RMD160 75670b6ed36ad140047aa40d0acae75b067b77ae SHA1 c9edffc1f4d07cb03172956124283b7b6b11b105 SHA256 f08eabf9af8f058bc9b5d43451c921845d9e6925fa282ace60456f46f52e6d37
+MISC ChangeLog 10531 RMD160 b521645fbb110746fd5bc9535e8f78795623f536 SHA1 e70a7a1386964c30328cf2437696f265a12beb56 SHA256 d96707272d0ac57893084b6d9afcea276bf8642e4d4211efe9b1894cfbcb8c5d
 MISC metadata.xml 363 RMD160 72102b036fe76e530f4519a0aa081778aae7262a SHA1 b8f61d984af7ca03255f57bf4126799e58863f2d SHA256 6aa7ec680dc08ab936d6f59f1444bba56902fec42eaf16d5c9919350a5c355cc
